feat: Navbar 링크 이동 기능 구현, util path alias 설정 #6
navbar 메뉴 클릭 시 이동 및 볼드 처리
util 폴더 path alias 추가 설정

--- a/front/src/global.css
+++ b/front/src/global.css
@@ -15,6 +15,9 @@
 
 @layer components {
   .navBar_menu {
-    font-weight: 700;
+    font-weight: 500;
+  }
+  .navBar_menu_active {
+    font-weight: 800;
   }
 }
