--- a/front/src/global.css
+++ b/front/src/global.css
@@ -17,7 +17,13 @@
   .navBar_menu {
     font-weight: 500;
   }
-  .navBar_menu_active {
-    font-weight: 800;
+  .board_background {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.47);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9.4px);
+    -webkit-backdrop-filter: blur(9.4px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
