--- a/front/src/global.css
+++ b/front/src/global.css
@@ -10,6 +10,7 @@
     height: 100vh;
     width: 100vw;
     font-family: 'SUIT', sans-serif;
+    font-weight: 500;
   }
 }
 
@@ -17,13 +18,28 @@
   .navBar_menu {
     font-weight: 500;
   }
-  .board_background {
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.47);
-    border-radius: 16px;
+  .bg-glass {
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 15px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(9.4px);
     -webkit-backdrop-filter: blur(9.4px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+  }
+  .base {
+    padding-top: 87px;
+    max-width: 29.75rem;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  .btn-medium {
+    @apply rounded-2xl py-2 px-3 text-white w-fit;
+  }
+
+  .btn-small {
+    @apply rounded-lg py-2 px-3 text-white w-fit;
   }
 }
