--- a/front/src/global.css
+++ b/front/src/global.css
@@ -3,14 +3,19 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  body {
     background: radial-gradient(ellipse at top, #ff6060, transparent),
       radial-gradient(ellipse at bottom, #9345e1, transparent);
     background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-    font-family: 'SUIT', sans-serif;
+    font-family: 'SUIT', 'Abril Fatface', sans-serif;
     font-weight: 500;
+    min-height: 100vh;
+    padding-bottom: 50px;
+  }
+
+  h1,
+  p {
+    line-height: 1;
   }
 }
 
@@ -20,7 +25,7 @@
   }
 
   .bg-glass {
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.75);
     border-radius: 15px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(9.4px);
@@ -55,5 +60,14 @@
 
   .btn-small {
     @apply rounded-lg py-2 px-3 text-white w-fit;
+  }
+
+  .main-section-title {
+    @apply my-10 text-2xl font-extrabold;
+  }
+
+  .d-day-title {
+    font-family: 'Abril Fatface';
+    @apply text-5xl;
   }
 }
