--- a/front/src/global.css
+++ b/front/src/global.css
@@ -25,23 +25,25 @@
   }
 
   .bg-glass {
-    background: rgba(255, 255, 255, 0.75);
+    background: rgba(255, 255, 255, 0.6);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
     border-radius: 15px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9.4px);
-    -webkit-backdrop-filter: blur(9.4px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.1);
   }
 
-  .bg-glass-full {
-    background: rgba(255, 255, 255);
+  .bg-focus-white {
+    background: white;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
     border-radius: 15px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9.4px);
-    -webkit-backdrop-filter: blur(9.4px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+  }
+
+  .bg-modal {
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
   }
 
   .base {
