feat: 문화생활 생성/수정 페이지 UI 개발 #15

--- a/front/src/global.css
+++ b/front/src/global.css
@@ -86,3 +86,23 @@ body::-webkit-scrollbar-thumb {
 
   border-radius: 15px;
 }
+
+.react-datepicker__input-container input {
+  width: 95px;
+}
+
+select {
+  -webkit-appearance: none; /* for chrome */
+
+  -moz-appearance: none; /*for firefox*/
+
+  appearance: none;
+}
+
+select::-ms-expand {
+  display: none; /*for IE10,11*/
+}
+
+select {
+  background: url('assets/down_arrow.svg') no-repeat 97% 50%/15px auto;
+}
