--- a/front/src/global.css
+++ b/front/src/global.css
@@ -76,11 +76,11 @@
 
 /* 스크롤바 커스텀 */
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 8px; /* 스크롤바의 너비 */
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   height: 30%; /* 스크롤바의 길이 */
   background: #9345e1; /* 스크롤바의 색상 */
 
