design: body padding bottom 수정 #39

--- a/front/src/global.css
+++ b/front/src/global.css
@@ -10,7 +10,7 @@
     font-family: 'SUIT', 'Abril Fatface', sans-serif;
     font-weight: 500;
     min-height: 100vh;
-    padding-bottom: 50px;
+    padding-bottom: 5.4375rem;
   }
 
   h1,
