--- a/front/src/global.css
+++ b/front/src/global.css
@@ -10,7 +10,7 @@
     font-family: 'SUIT', 'Abril Fatface', sans-serif;
     font-weight: 500;
     min-height: 100vh;
-    padding-bottom: 5.4375rem;
+    padding-bottom: 50px;
   }
 
   h1,
@@ -47,7 +47,7 @@
   }
 
   .base {
-    padding-top: 87px;
+    padding-top: 50px;
     max-width: 29.75rem;
     display: flex;
     flex-direction: column;
